# image_similarity

./: .env  Dockerfile  Dockerfile_GPU  README.md  image_vectorizer.py  io_controller.py  main.py  manager.py  pyproject.toml  requirements.txt  search_engine.py  settings.py  setup_env.sh  setup_env_GPU.sh
apis/: __init__.py  similarity.py
helpers/: __init__.py  io_controller_helper.py
models/: __init__.py  image.py  image_dataset.py
