[project]
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
indent-width = 4
extend-exclude = ["data"]


[tool.ruff.format]
indent-style = "space"
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 88


[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "ASYNC",  # flake8-async
    "Q",      # flake8-quotes
    "E",      # pycodestyle-errors
    "W",      # pycodestyle-warnings
    "UP",     # pyupgrade
    "I",      # isort
    "N",      # namings
    "FURB",   # refurb
    "PL",     # pylint
]

[tool.ruff.lint.pylint]
max-statements = 75
max-branches = 20
max-args = 10

[tool.ruff.lint.pycodestyle]
max-doc-length = 88